Update website format

--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html>
     <head>
         <title>Arnav Thareja</title>
+        <link rel='stylesheet' href='assets/main.css'>
+        <script src='index.js'></script>
     </head>
     <body>
-        <p>Hi! I am Arnav Thareja.</p>
-        <br>
-        <p>I am an incoming freshman studying Computer Science at the University of Washington's Paul G. Allen School of Computer Science & Engineering.</p>
-        <br>
-        <p>Work in progress.</p>
+        <div class='profile'>
+            <div class='profile-picture-container'>
+                <img src='assets/arnav-pic.jpg' class='profile-picture'>
+            </div>
+            <div class='profile-description'>
+                <p>Hi! I am Arnav Thareja. I am an incoming freshman studying Computer Science at the University of Washington's Paul G. Allen School of Computer Science & Engineering.</p>
+            </div>
+        </div>
+        <div class='projects'>
+            <div class='project-card card-left'>
+                <div class='project-title'>
+                    <p>Project Title</p>
+                </div>
+                <div class='project-description'>
+                    <p>Project Description</p>
+                </div>
+            </div>
+            <div class='project-card card-right'>
+                <div class='project-title'>
+                    <p>Project Title</p>
+                </div>
+                <div class='project-description'>
+                    <p>Project Description</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
