Use CSS Flexbox

--- a/index.html
+++ b/index.html
@@ -15,21 +15,43 @@
             </div>
         </div>
         <div class='projects'>
-            <div class='project-card card-left'>
-                <div class='project-title'>
-                    <p>Project Title</p>
+            <h2>Projects</h2>
+            <div class='project-container'>
+                <div class='project-card'>
+                    <div class='project-title'>
+                        <p>Project Title</p>
+                    </div>
+                    <div class='project-description'>
+                        <p>Project Description</p>
+                    </div>
                 </div>
-                <div class='project-description'>
-                    <p>Project Description</p>
+                <div class='project-card'>
+                    <div class='project-title'>
+                        <p>Project Title</p>
+                    </div>
+                    <div class='project-description'>
+                        <p>Project Description</p>
+                    </div>
                 </div>
-            </div>
-            <div class='project-card card-right'>
-                <div class='project-title'>
-                    <p>Project Title</p>
+                <div class='project-card'>
+                    <div class='project-title'>
+                        <p>Project Title</p>
+                    </div>
+                    <div class='project-description'>
+                        <p>Project Description</p>
+                    </div>
                 </div>
-                <div class='project-description'>
-                    <p>Project Description</p>
+                
+                <!-- Ghost card for placeholder, uncomment if two cards on last line --
+                <div class='ghost-card'>
+                    <div class='ghost-title'>
+                        <p>Project Title</p>
+                    </div>
+                    <div class='ghost-description'>
+                        <p>Project Description</p>
+                    </div>
                 </div>
+                <-- -->
             </div>
         </div>
     </body>
