--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>Arnav Thareja</title>
+        
         <link rel='stylesheet' href='assets/main.css'>
-        <script src='index.js'></script>
+
+        <!-- Import AOS Library for card transitions -->
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     </head>
     <body>
         <div class='profile'>
@@ -11,39 +14,44 @@
                 <img src='assets/arnav-pic.jpg' class='profile-picture'>
             </div>
             <div class='profile-description'>
-                <p>Hi! I am Arnav Thareja. I am an incoming freshman studying Computer Science at the University of Washington's Paul G. Allen School of Computer Science & Engineering.</p>
+                <h1>Arnav Thareja</h1>
+                <p>Hi! I am an incoming freshman studying Computer Science at the University of Washington's Paul G. Allen School of Computer Science & Engineering.</p>
+            </div>
+            <div class='down-arrow'>
+                <a href='#projects'><img src='assets/down-arrow.png' id='arrow-image'></a>
             </div>
         </div>
-        <div class='projects'>
+        <div class='projects' id='projects'>
             <h2>Projects</h2>
             <div class='project-container'>
-                <div class='project-card'>
+                <div class='project-card' data-aos='flip-left'>
+                    <div class='project-image-container'>
+                        <img src='assets/yearbook-2020-logo.png' class='project-image'>
+                    </div>
                     <div class='project-title'>
-                        <p>Project Title</p>
+                        <p>Yearbook 2020</p>
                     </div>
                     <div class='project-description'>
-                        <p>Project Description</p>
+                        <p>An online app designed to keep students connected during COVID-19 quarantines. It gives students a virtual yearbook page that others can sign and allows them to sign others' yearbook pages.</p>
                     </div>
                 </div>
-                <div class='project-card'>
+                <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
+                    <div class='project-image-container'>
+                        <img src='assets/table-tennis-logo.png' class='project-image'>
+                    </div>
                     <div class='project-title'>
-                        <p>Project Title</p>
+                        <p>Table Tennis Sign-In</p>
                     </div>
                     <div class='project-description'>
-                        <p>Project Description</p>
-                    </div>
-                </div>
-                <div class='project-card'>
-                    <div class='project-title'>
-                        <p>Project Title</p>
-                    </div>
-                    <div class='project-description'>
-                        <p>Project Description</p>
+                        <p>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
                     </div>
                 </div>
                 
                 <!-- Ghost card for placeholder, uncomment if two cards on last line --
-                <div class='ghost-card'>
+                <div class='ghost-card' data-aos='flip-left' data-aos-delay='100'>
+                    <div class='ghost-image'>
+
+                    </div>
                     <div class='ghost-title'>
                         <p>Project Title</p>
                     </div>
@@ -54,5 +62,15 @@
                 <-- -->
             </div>
         </div>
+
+        <footer>
+            <p>Made by Arnav Thareja. July 2020</p>
+        </footer>
+
+        <!-- Initialize AOS Library -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
