Update profile text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class='profile-description'>
                 <h1>Arnav Thareja</h1>
-                <p>Hi! I am an incoming freshman studying Computer Science at the University of Washington's Paul G. Allen School of Computer Science & Engineering.</p>
+                <p>Hi! I am a freshman at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
             </div>
             <div class='down-arrow'>
                 <a href='#projects'><img src='assets/down-arrow.png' id='arrow-image'></a>
