Change table tennis logo url

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
                     <div class='project-image-container'>
-                        <img src='assets/table-tennis-logo.png' class='project-image'>
+                        <img src='assets/table-tennis-logo.PNG' class='project-image'>
                     </div>
                     <div class='project-title'>
                         <p>Table Tennis Sign-In</p>
