Update footer styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class='profile'>
             <div class='profile-picture-container'>
-                <img src='assets/arnav-pic.jpg' class='profile-picture'>
+                <img src='assets/arnav-pic.jpg' class='profile-picture disable-select disable-drag'>
             </div>
             <div class='profile-description'>
                 <h1>Arnav Thareja</h1>
@@ -64,7 +64,7 @@
         </div>
 
         <footer>
-            <p>Made by Arnav Thareja. July 2020</p>
+            <p>&copy; 2020 Arnav Thareja. All rights reserved.</p>
         </footer>
 
         <!-- Initialize AOS Library -->
