Update Yearbook 2020 description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p>Yearbook 2020</p>
                     </div>
                     <div class='project-description'>
-                        <p>An online app designed to keep students connected during COVID-19 quarantines. It gives students a virtual yearbook page that others can sign and allows them to sign others' yearbook pages.</p>
+                        <p>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.</p>
                     </div>
                 </div>
                 <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
