Change rellax scroll speed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     </head>
     <body>
-        <div class='profile rellax'>
+        <div class='profile rellax' data-rellax-speed="-4">
             <div class='profile-picture-container'>
                 <img src='assets/arnav-pic.jpg' class='profile-picture disable-select disable-drag' alt='Profile Picture' oncontextmenu="return false">
             </div>
@@ -27,7 +27,7 @@
                 <a href='#portfolio'><img src='assets/down-arrow.png' id='arrow-image'></a>
             </div>
         </div>
-        <div class='rellax' data-rellax-speed="0.5" id='portfolio'>
+        <div class='rellax' id='portfolio'>
             <div class='portfolio-container'>
                 <div class='portfolio-menu'>
                     <h2 id='Education' class='menu' onclick='select("Education")'>Education</h2>
