Center portfolio title and edit margins

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                     <h2 id='Resume' class='menu' onclick='select("Resume")'>Resume</h2>
                 </div>
 
-                <h2 id='portfolio-title'>Projects</h2>
+                <div class='title-container'>
+                    <h2 id='portfolio-title'>Projects</h2>
+                </div>
 
                 <div class='portfolio'>
                     <div class='Projects-container'>
