--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     </head>
     <body>
-        <div class='profile rellax' data-rellax-speed="-3">
+        <div class='profile'>
             <div class='profile-picture-container'>
                 <img src='assets/arnav-pic.jpg' class='profile-picture disable-select disable-drag' alt='Profile Picture' oncontextmenu="return false">
             </div>
@@ -27,51 +27,49 @@
                 <a href='#portfolio'><img src='assets/down-arrow.png' id='arrow-image'></a>
             </div>
         </div>
-        <div class='rellax' id='portfolio' data-rellax-speed="0">
-            <div class='portfolio-container'>
-                <div class='portfolio-menu'>
-                    <h2 id='Education' class='menu' onclick='select("Education")'>Education</h2>
-                    <h2 id='Experience' class='menu' onclick='select("Experience")'>Experience</h2>
-                    <h2 id='Projects' class='menu selected' onclick='select("Projects")'>Projects</h2>
-                    <h2 id='Resume' class='menu' onclick='select("Resume")'>Resume</h2>
-                </div>
+        <div class='portfolio-container' id='portfolio'>
+            <div class='portfolio-menu'>
+                <h2 id='Education' class='menu' onclick='select("Education")'>Education</h2>
+                <h2 id='Experience' class='menu' onclick='select("Experience")'>Experience</h2>
+                <h2 id='Projects' class='menu selected' onclick='select("Projects")'>Projects</h2>
+                <h2 id='Resume' class='menu' onclick='select("Resume")'>Resume</h2>
+            </div>
 
-                <div class='title-container'>
-                    <h2 id='portfolio-title'>Projects</h2>
-                </div>
+            <div class='title-container'>
+                <h2 id='portfolio-title'>Projects</h2>
+            </div>
 
-                <div class='portfolio'>
-                    <div class='Projects-container'>
-                        <div class='project-card' data-aos='flip-left'>
-                            <div class='project-image-container'>
-                                <img src='assets/yearbook-2020-logo.png' class='project-image'>
-                            </div>
-                            <div class='project-title'>
-                                <p>Yearbook 2020</p>
-                            </div>
-                            <div class='project-description'>
-                                <p>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.</p>
-                            </div>
+            <div class='portfolio'>
+                <div class='Projects-container'>
+                    <div class='project-card' data-aos='flip-left'>
+                        <div class='project-image-container'>
+                            <img src='assets/yearbook-2020-logo.png' class='project-image'>
                         </div>
-                        <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
-                            <div class='project-image-container'>
-                                <img src='assets/table-tennis-logo.PNG' class='project-image'>
-                            </div>
-                            <div class='project-title'>
-                                <p>Table Tennis Sign-In</p>
-                            </div>
-                            <div class='project-description'>
-                                <p>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
-                            </div>
+                        <div class='project-title'>
+                            <p>Yearbook 2020</p>
+                        </div>
+                        <div class='project-description'>
+                            <p>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.</p>
+                        </div>
+                    </div>
+                    <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
+                        <div class='project-image-container'>
+                            <img src='assets/table-tennis-logo.PNG' class='project-image'>
+                        </div>
+                        <div class='project-title'>
+                            <p>Table Tennis Sign-In</p>
+                        </div>
+                        <div class='project-description'>
+                            <p>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <footer>
-                <p>&copy; 2020 Arnav Thareja. All rights reserved.</p>
-            </footer>
         </div>
+
+        <footer>
+            <p>&copy; 2020 Arnav Thareja. All rights reserved.</p>
+        </footer>
 
         <!-- Link scripts -->
         <script src='assets/index.js'></script>
@@ -83,12 +81,6 @@
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init();
-        </script>
-
-        <!-- Rellax library for parallax scrolling -->
-        <script src='assets/rellax.min.js'></script>
-        <script>
-            var rellax = new Rellax('.rellax');
         </script>
     </body>
 </html>
