Update icons and add transitions

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 <h1>Arnav Thareja</h1>
                 <p>Hi! I am a freshman at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
                 <div class="icons">
-                    <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/"><i class="fa fa-linkedin-square fa-3x"></i></a>
-                    <a target="_blank" href="https://github.com/arnavthareja/"><i class="fa fa-github-square fa-3x"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/"><div class='icon'><i class="fa fa-linkedin-square fa-2x"></i></div></a>
+                    <a target="_blank" href="https://github.com/arnavthareja/"><div class='icon'><i class="fa fa-github fa-2x"></i></div></a>
+                    <a target="_blank" href="mailto:arnav.thareja25@gmail.com"><div class='icon'><i class="fa fa-envelope fa-2x"></i></div></a>
                 </div>
             </div>
             <div class='down-arrow'>
@@ -68,7 +69,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2020 Arnav Thareja. All rights reserved.</p>
+            <p>&copy; 2020 Arnav Thareja</p>
         </footer>
 
         <!-- Link scripts -->
