--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
                             <p>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
                         </div>
                     </div>
+                    <!--
+                    <div class='project-card' data-aos='flip-left' data-aos-delay='200'>
+                        <div class='project-image-container'>
+                            <img src='assets/table-tennis-logo.PNG' class='project-image'>
+                        </div>
+                        <div class='project-title'>
+                            <p>Music Analysis</p>
+                        </div>
+                        <div class='project-description'>
+                            <p>Analyzed samples of popular music in Python and trained a classification model using Tensorflow to predict success of a provided music sample.</p>
+                        </div>
+                    </div>
+                    -->
                 </div>
             </div>
         </div>
