Add links to project cards

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div class='portfolio-container' id='portfolio'>
             <div class='portfolio-menu'>
+                <!-- TODO: Change to links to scroll down to specified sections and highlight link when scrolled to that section -->
                 <h2 id='Education' class='menu' onclick='select("Education")'>Education</h2>
                 <h2 id='Experience' class='menu' onclick='select("Experience")'>Experience</h2>
                 <h2 id='Projects' class='menu selected' onclick='select("Projects")'>Projects</h2>
@@ -50,7 +51,7 @@
                             <p>Yearbook 2020</p>
                         </div>
                         <div class='project-description'>
-                            <p>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.</p>
+                            <p>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
                         </div>
                     </div>
                     <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
