--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class='down-arrow'>
-                <a href='#portfolio'><img src='assets/down-arrow.png' id='arrow-image'></a>
+                <a href='#portfolio'><img src='assets/down-arrow.png' id='arrow-image' class='disable-select disable-drag'></a>
             </div>
         </div>
         <div class='portfolio-container' id='portfolio'>
