--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 <h1>Arnav Thareja</h1>
                 <p>Hi! I am a freshman at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
                 <div class="icons">
-                    <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/"><div class='icon'><i class="fa fa-linkedin-square fa-2x"></i></div></a>
-                    <a target="_blank" href="https://github.com/arnavthareja/"><div class='icon'><i class="fa fa-github fa-2x"></i></div></a>
-                    <a target="_blank" href="mailto:arnav.thareja25@gmail.com"><div class='icon'><i class="fa fa-envelope fa-2x"></i></div></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/"><div class='icon center'><i class="fa fa-linkedin-square fa-2x"></i></div></a>
+                    <a target="_blank" href="https://github.com/arnavthareja/"><div class='icon center'><i class="fa fa-github fa-2x"></i></div></a>
+                    <a target="_blank" href="mailto:arnav.thareja25@gmail.com"><div class='icon center'><i class="fa fa-envelope fa-2x"></i></div></a>
                 </div>
             </div>
-            <div class='down-arrow'>
+            <div class='down-arrow center'>
                 <a href='#portfolio'>
                     <div class='arrow'></div>
                 </a>
             </div>
         </div>
         <div class='portfolio-container' id='portfolio'>
-            <div class='portfolio-menu'>
+            <div class='portfolio-menu flex-vertical'>
                 <!-- TODO: Change to links to scroll down to specified sections and highlight link when scrolled to that section -->
                 <button type="button" id='Experience' class='menu' onclick='select("Experience")'><a href='#experience'><h2>Experience</h2></a></button>
                 <button type="button" id='Projects' class='menu selected' onclick='select("Projects")'><a href='#projects'><h2>Projects</h2></a></button>
@@ -44,7 +44,7 @@
             </div>
 
             <div class='portfolio'>
-                <div class='Projects-container' id='projects'>
+                <div class='section-container grid-3' id='projects'>
                     <div class='project-card' data-aos='flip-left'>
                         <div class='project-image-container'>
                             <img src='assets/yearbook-2020-logo.png' class='project-image'>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
-                        <div class='project-image-container'>
+                        <div class='project-image-container center'>
                             <img src='assets/table-tennis-logo.PNG' class='project-image'>
                         </div>
                         <div class='project-title'>
