Reorganize assets folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link rel='stylesheet' type="text/css" href='assets/main.css'>
+        <link rel='stylesheet' type="text/css" href='assets/stylesheets/main.css'>
 
         <!-- Import AOS Library for card transitions -->
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -13,7 +13,7 @@
     <body>
         <div class='profile'>
             <div class='profile-picture-container'>
-                <img src='assets/arnav-pic.jpg' class='profile-picture disable-select disable-drag' alt='Profile Picture' oncontextmenu="return false">
+                <img src='assets/images/arnav-pic.jpg' class='profile-picture disable-select disable-drag' alt='Profile Picture' oncontextmenu="return false">
             </div>
             <div class='profile-description'>
                 <h1>Arnav Thareja</h1>
@@ -47,7 +47,7 @@
                 <div class='section-container grid-3' id='projects'>
                     <div class='project-card' data-aos='flip-left'>
                         <div class='project-image-container'>
-                            <img src='assets/yearbook-2020-logo.png' class='project-image'>
+                            <img src='assets/images/yearbook-2020-logo.png' class='project-image'>
                         </div>
                         <div class='project-title'>
                             <p>Yearbook 2020</p>
@@ -58,7 +58,7 @@
                     </div>
                     <div class='project-card' data-aos='flip-left' data-aos-delay='100'>
                         <div class='project-image-container center'>
-                            <img src='assets/table-tennis-logo.PNG' class='project-image'>
+                            <img src='assets/images/table-tennis-logo.PNG' class='project-image'>
                         </div>
                         <div class='project-title'>
                             <p>Table Tennis Sign-In</p>
@@ -89,7 +89,7 @@
         </footer>
 
         <!-- Link scripts -->
-        <script src='assets/index.js'></script>
+        <script src='assets/scripts/index.js'></script>
 
         <!-- Import Fontawesome icons -->
         <script src="https://use.fontawesome.com/b3e5314a5d.js"></script>
