--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link rel='stylesheet' type="text/css" href='assets/stylesheets/main.css'>
+        <link rel='stylesheet' type="text/css" href='assets/stylesheets/build/main.css'>
 
         <!-- Import AOS Library for card transitions -->
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
