--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class='profile-description'>
                 <h1 class='title-large'>Arnav Thareja</h1>
-                <p>Hi! I am a freshman at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
+                <p class='text-medium'>Hi! I am a freshman at the University of Washington studying Computer Science in the Paul G. Allen School of Computer Science & Engineering.</p>
                 <div class="icons">
                     <a target="_blank" href="https://www.linkedin.com/in/arnavthareja/"><div class='icon center'><i class="fa fa-linkedin-square fa-2x"></i></div></a>
                     <a target="_blank" href="https://github.com/arnavthareja/"><div class='icon center'><i class="fa fa-github fa-2x"></i></div></a>
@@ -61,10 +61,10 @@
                             <img src='assets/images/yearbook-2020-logo.png' class='project-image'>
                         </div>
                         <div class='project-title'>
-                            <p>Yearbook 2020</p>
+                            <p class='title-small'>Yearbook 2020</p>
                         </div>
                         <div class='project-description'>
-                            <p>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
+                            <p class='text-small'>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
                         </div>
                     </div>
                     <div class='project-card' data-aos='fade-up' data-aos-delay='100'>
@@ -72,10 +72,10 @@
                             <img src='assets/images/table-tennis-logo.PNG' class='project-image'>
                         </div>
                         <div class='project-title'>
-                            <p>Table Tennis Sign-In</p>
+                            <p class='title-small'>Table Tennis Sign-In</p>
                         </div>
                         <div class='project-description'>
-                            <p>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
+                            <p class='text-small'>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
                         </div>
                     </div>
                     <div class='project-card' data-aos='fade-up' data-aos-delay='200'>
@@ -83,10 +83,10 @@
                             <img src='assets/images/table-tennis-logo.PNG' class='project-image'>
                         </div>
                         <div class='project-title'>
-                            <p>Music Analysis</p>
+                            <p class='title-small'>Music Analysis</p>
                         </div>
                         <div class='project-description'>
-                            <p>An analysis of samples of popular music in Python. Looked for key features of popular songs and what differentiates them from unpopular music. Trained a classification model using Tensorflow to predict success of a provided music sample.</p>
+                            <p class='text-small'>An analysis of samples of popular music in Python. Looked for key features of popular songs and what differentiates them from unpopular music. Trained a classification model using Tensorflow to predict success of a provided music sample.</p>
                         </div>
                     </div>
                     <!--
