--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class='portfolio'>
                 <div class='section-container grid-3' id='projects'>
-                    <div class='project-card' data-aos='fade-up'>
+                    <div class='project-card' data-aos='fade'>
                         <div class='project-image-container center'>
                             <img src='assets/images/yearbook-2020-logo.png' class='project-image'>
                         </div>
@@ -67,7 +67,7 @@
                             <p class='text-small'>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
                         </div>
                     </div>
-                    <div class='project-card' data-aos='fade-up' data-aos-delay='100'>
+                    <div class='project-card' data-aos='fade' data-aos-delay='50'>
                         <div class='project-image-container center'>
                             <img src='assets/images/table-tennis-logo.PNG' class='project-image'>
                         </div>
@@ -78,7 +78,7 @@
                             <p class='text-small'>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
                         </div>
                     </div>
-                    <div class='project-card' data-aos='fade-up' data-aos-delay='200'>
+                    <div class='project-card' data-aos='fade' data-aos-delay='100'>
                         <div class='project-image-container center'>
                             <img src='assets/images/table-tennis-logo.PNG' class='project-image'>
                         </div>
